// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PerfectionIssueGroup with type critical 1`] = `
<div
  class="PerfectionIssueGroup"
>
  <h3
    class="PerfectionIssueGroup-Title"
  >
    Понятность
  </h3>
  <div
    class="WikiFormatter PerfectionIssueGroup-Description"
  />
  <div
    class="WikiFormatter PerfectionIssueGroup-Recommendation"
  />
  {"component":"PerfectionProgressBar","props":{"currentLevel":"critical","currentWeight":22,"zones":[{"level":"critical","width":33},{"level":"warning","width":33},{"level":"ok","width":34}]}}{"component":"PerfectionExecution","props":{"className":"PerfectionIssueGroup-Execution","execution":{"name":{"ru":"Переведение сервиса в статус Требуется информация"},"applyDate":"2019-10-17T00:15:16.000Z","isCritical":true}}}
</div>
`;

exports[`PerfectionIssueGroup with type ok 1`] = `
<div
  class="PerfectionIssueGroup"
>
  <h3
    class="PerfectionIssueGroup-Title"
  >
    Понятность
  </h3>
  <div
    class="WikiFormatter PerfectionIssueGroup-Description"
  />
  <div
    class="WikiFormatter PerfectionIssueGroup-Recommendation"
  />
  {"component":"PerfectionProgressBar","props":{"currentLevel":"ok","currentWeight":75,"zones":[{"level":"critical","width":33},{"level":"warning","width":33},{"level":"ok","width":34}]}}{"component":"PerfectionExecution","props":{"className":"PerfectionIssueGroup-Threat","execution":{"name":{"ru":"Сервис перейдет в желтую зону при достижении порога 66% и будет переведен в статус Требуется информация"},"isCritical":true},"threat":true}}
</div>
`;

exports[`PerfectionIssueGroup with type warning 1`] = `
<div
  class="PerfectionIssueGroup"
>
  <h3
    class="PerfectionIssueGroup-Title"
  >
    Понятность
  </h3>
  <div
    class="WikiFormatter PerfectionIssueGroup-Description"
  />
  <div
    class="WikiFormatter PerfectionIssueGroup-Recommendation"
  />
  {"component":"PerfectionProgressBar","props":{"currentLevel":"warning","currentWeight":55,"zones":[{"level":"critical","width":33},{"level":"warning","width":33},{"level":"ok","width":34}]}}{"component":"PerfectionExecution","props":{"className":"PerfectionIssueGroup-Execution","execution":{"name":{"ru":"Переведение сервиса в статус Требуется информация"},"applyDate":"2019-10-17T00:15:16.000Z","isCritical":true}}}{"component":"PerfectionExecution","props":{"className":"PerfectionIssueGroup-Threat","execution":{"name":{"ru":"Сервис перейдет в красную зону при достижении порога 33% и будет Закрыт"},"isCritical":true},"threat":true}}
</div>
`;
